[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/obstacle/Spaceray.gd" type="Script" id=1]
[ext_resource path="res://sprites/obstacle/spaceray_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/obstacle/spaceray_2.png" type="Texture" id=3]
[ext_resource path="res://sounds/collision/spaceray.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "narrow"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.196146, 5.09825 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.062, 1 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 192 )

[node name="Spaceray" type="Node2D"]
z_index = 6
z_as_relative = false
script = ExtResource( 1 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[node name="AudioCollisionPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Phase1" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -16, -192, 16, -192, 16, 192, -16, 192 )

[node name="Phase1Anim" type="AnimationPlayer" parent="Phase1"]
autoplay = "narrow"
anims/narrow = SubResource( 1 )

[node name="Phase2" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 13

[node name="ParticlesTop" type="CPUParticles2D" parent="Phase2"]
position = Vector2( 0, -224 )
amount = 100
lifetime = 0.7
direction = Vector2( 0, 1 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
scale_amount = 2.0
scale_amount_random = 1.0

[node name="ParticlesBottom" type="CPUParticles2D" parent="Phase2"]
position = Vector2( 0, 224 )
amount = 100
lifetime = 0.7
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
scale_amount = 2.0
scale_amount_random = 1.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Phase2"]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Phase2"]
shape = SubResource( 4 )
[connection signal="body_entered" from="Phase2" to="." method="_on_Phase2_body_entered"]
